--- a/src/FileDiffWidget.ui
+++ b/src/FileDiffWidget.ui
@@ -68,18 +68,10 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="FileViewWidget" name="widget_diff_left" native="true">
-         <property name="focusPolicy">
-          <enum>Qt::StrongFocus</enum>
-         </property>
-        </widget>
+        <widget class="FileViewWidget" name="widget_diff_left" native="true"/>
        </item>
        <item row="0" column="2">
-        <widget class="FileViewWidget" name="widget_diff_right" native="true">
-         <property name="focusPolicy">
-          <enum>Qt::StrongFocus</enum>
-         </property>
-        </widget>
+        <widget class="FileViewWidget" name="widget_diff_right" native="true"/>
        </item>
        <item row="0" column="3">
         <widget class="QScrollBar" name="verticalScrollBar">
