--- a/src/CommitExploreWindow.ui
+++ b/src/CommitExploreWindow.ui
@@ -155,10 +155,7 @@
       <property name="frameShadow">
        <enum>QFrame::Sunken</enum>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <property name="spacing">
-        <number>0</number>
-       </property>
+      <layout class="QGridLayout" name="gridLayout">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -171,13 +168,30 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item>
-        <widget class="FileDiffWidget" name="widget_fileview" native="true">
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QScrollBar" name="horizontalScrollBar">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="FileViewWidget" name="widget_fileview" native="true">
          <property name="minimumSize">
           <size>
            <width>100</width>
            <height>0</height>
           </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QScrollBar" name="verticalScrollBar">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
         </widget>
        </item>
@@ -189,15 +203,15 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>FileViewWidget</class>
+   <extends>QWidget</extends>
+   <header>FileViewWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>ReadOnlyLineEdit</class>
    <extends>QLineEdit</extends>
    <header>ReadOnlyLineEdit.h</header>
-  </customwidget>
-  <customwidget>
-   <class>FileDiffWidget</class>
-   <extends>QWidget</extends>
-   <header>FileDiffWidget.h</header>
-   <container>1</container>
   </customwidget>
  </customwidgets>
  <tabstops>
