--- a/src/FileDiffWidget.ui
+++ b/src/FileDiffWidget.ui
@@ -126,7 +126,7 @@
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../resources.qrc">
+          <iconset>
            <normaloff>:/image/maximize.png</normaloff>:/image/maximize.png</iconset>
          </property>
          <property name="iconSize">
@@ -162,8 +162,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
