--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -952,7 +952,7 @@
      <x>0</x>
      <y>0</y>
      <width>848</width>
-     <height>24</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -1082,6 +1082,12 @@
         </property>
         <item row="0" column="0">
          <widget class="TextEditorWidget" name="widget_log" native="true">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>64</height>
+           </size>
+          </property>
           <property name="focusPolicy">
            <enum>Qt::StrongFocus</enum>
           </property>
