--- a/resources.qrc
+++ b/resources.qrc
@@ -21,5 +21,6 @@
         <file>image/terminal.svgz</file>
         <file>image/explorer.svgz</file>
         <file>image/about.png</file>
+        <file>image/redsquare.svgz</file>
     </qresource>
 </RCC>
