--- a/src/SetGlobalUserDialog.ui
+++ b/src/SetGlobalUserDialog.ui
@@ -1,33 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SetUserDialog</class>
- <widget class="QDialog" name="SetUserDialog">
+ <class>SetGlobalUserDialog</class>
+ <widget class="QDialog" name="SetGlobalUserDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>141</height>
+    <height>97</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Set User</string>
+   <string>Global User Setting</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QRadioButton" name="radioButton_global">
-     <property name="text">
-      <string>Global</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QRadioButton" name="radioButton_repository">
-     <property name="text">
-      <string>Repository</string>
-     </property>
-    </widget>
-   </item>
    <item>
     <layout class="QFormLayout" name="formLayout">
      <property name="fieldGrowthPolicy">
@@ -86,7 +72,7 @@
      <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
-        <string>Cancel</string>
+        <string>Skip</string>
        </property>
       </widget>
      </item>
@@ -99,32 +85,32 @@
   <connection>
    <sender>pushButton</sender>
    <signal>clicked()</signal>
-   <receiver>SetUserDialog</receiver>
+   <receiver>SetGlobalUserDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>273</x>
-     <y>123</y>
+     <x>266</x>
+     <y>76</y>
     </hint>
     <hint type="destinationlabel">
-     <x>283</x>
-     <y>193</y>
+     <x>271</x>
+     <y>120</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>pushButton_2</sender>
    <signal>clicked()</signal>
-   <receiver>SetUserDialog</receiver>
+   <receiver>SetGlobalUserDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>339</x>
-     <y>116</y>
+     <x>342</x>
+     <y>80</y>
     </hint>
     <hint type="destinationlabel">
-     <x>347</x>
-     <y>197</y>
+     <x>344</x>
+     <y>122</y>
     </hint>
    </hints>
   </connection>
