文字コード変換（仮）

--- a/resources.qrc
+++ b/resources.qrc
@@ -35,5 +35,6 @@
         <file>darktheme/vsb/vsb_slider.png</file>
         <file>darktheme/vsb/vsb_sub_line.png</file>
         <file>darktheme/graphcolor.png</file>
+        <file>image/menu.png</file>
     </qresource>
 </RCC>
