--- a/src/CommitExploreWindow.ui
+++ b/src/CommitExploreWindow.ui
@@ -144,6 +144,9 @@
       </column>
      </widget>
      <widget class="QListWidget" name="listWidget">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
