--- a/src/FileHistoryWindow.ui
+++ b/src/FileHistoryWindow.ui
@@ -37,6 +37,9 @@
       <bool>false</bool>
      </property>
      <widget class="QTableWidget" name="tableWidget_log">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
